--- a/flask_user_auth/templates/login.html
+++ b/flask_user_auth/templates/login.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-
 <div class="box">
     <h1>Login</h1>
-
+    {% include 'errors.html' %}
     <form action="{{ url_for('login') }}" method="post">
         <input type="text" name="email" placeholder="Email" required="required"/>
         <input type="password" name="password" placeholder="Password" required="required"/>
-        <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large">Sign in</button>
     </form>
 </div>
-
 {% endblock %}
