--- a/flask_user_auth/templates/register.html
+++ b/flask_user_auth/templates/register.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-
 <div class="box">
 	<h1>Register</h1>
+    {% include 'errors.html' %}
     <form action="{{ url_for('register') }}" method="post">
     	<input type="text" name="name" placeholder="Name" required="required" />
 		<input type="email" name="email" placeholder="Email" required="required" />
         <input type="password" name="password" placeholder="Password" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Sign me up</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large">Sign up</button>
     </form>
 </div>
-
 {% endblock %}
