--- a/flask_user_auth/templates/login.html
+++ b/flask_user_auth/templates/login.html
@@ -4,9 +4,12 @@
     <h1>Login</h1>
     {% include 'errors.html' %}
     <form action="{{ url_for('login') }}" method="post">
-        <input type="text" name="email" placeholder="Email" required="required"/>
-        <input type="password" name="password" placeholder="Password" required="required"/>
-        <button type="submit" class="btn btn-primary btn-block btn-large">Sign in</button>
+        {% if form.csrf_token %}
+            {{ form.csrf_token }}
+        {% endif %}
+        {{ form.email(placeholder='Email') }}
+        {{ form.password(placeholder='Password') }}
+        {{ form.submit(class="btn btn-primary btn-block btn-large") }}
     </form>
 </div>
 {% endblock %}
