--- a/flask_user_auth/templates/register.html
+++ b/flask_user_auth/templates/register.html
@@ -4,10 +4,13 @@
 	<h1>Register</h1>
     {% include 'errors.html' %}
     <form action="{{ url_for('register') }}" method="post">
-    	<input type="text" name="name" placeholder="Name" required="required" />
-		<input type="email" name="email" placeholder="Email" required="required" />
-        <input type="password" name="password" placeholder="Password" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Sign up</button>
+        {% if form.csrf_token %}
+            {{ form.csrf_token }}
+        {% endif %}
+        {{ form.name(placeholder='Name') }}
+        {{ form.email(placeholder='Email') }}
+        {{ form.password(placeholder='Password') }}
+        {{ form.submit(class="btn btn-primary btn-block btn-large") }}
     </form>
 </div>
 {% endblock %}
