--- a/flask_user_auth/static/css/styles.css
+++ b/flask_user_auth/static/css/styles.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
 .btn {
 	display: inline-block;
 	*display: inline;
@@ -135,18 +133,6 @@ a {
 	text-align: center;
 }
 
-.error-list {
-	padding: 0;
-	margin-top: 0.75rem;
-	list-style-type: none;
-}
-
-.error-list li {
-	color: #ee6f57;
-	text-align: center;
-	margin-bottom: 0.75rem;
-}
-
 .box {
 	position: absolute;
 	top: 50%;
@@ -161,6 +147,7 @@ a {
 	text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 	letter-spacing: 1px;
 	text-align: center;
+	margin-bottom: 1.5rem;
 }
 
 .container {
@@ -175,7 +162,11 @@ a {
 	text-align: center;
 }
 
-input {
+input[type='submit'] {
+	margin-top: 1rem;
+}
+
+input:not([type='submit']) {
 	width: 100%;
 	margin-bottom: 10px;
 	background: rgba(0, 0, 0, 0.3);
@@ -195,6 +186,6 @@ input {
 	transition: box-shadow .5s ease;
 }
 
-input:focus {
+input:not([type='submit']):focus {
 	box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4), 0 1px 1px rgba(255, 255, 255, 0.2);
 }
